ingress/istio.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: istio-ingress-https
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: istio-ingressgateway
          servicePort: 443
        path: /
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: istio-ingress-http
  namespace: istio-system
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: istio-ingressgateway
          servicePort: 80
        path: /
